// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useShowUpdateAvailable does show critical update available banner if app version is not above min 1`] = `
[
  {
    "action": {
      "callback": [Function],
      "icon": "download",
      "label": "download",
    },
    "keepAlive": true,
    "level": "ERROR",
    "msgKey": "CRITICAL_UPDATE_AVAILABLE",
  },
]
`;

exports[`useShowUpdateAvailable does show update available banner if app version is not above latest 1`] = `
[
  {
    "action": {
      "callback": [Function],
      "icon": "download",
      "label": "download",
    },
    "keepAlive": true,
    "level": "WARN",
    "msgKey": "UPDATE_AVAILABLE",
  },
]
`;

exports[`useShowUpdateAvailable does still show critical update available banner if app version is not above min/latest 1`] = `
[
  {
    "action": {
      "callback": [Function],
      "icon": "download",
      "label": "download",
    },
    "keepAlive": true,
    "level": "ERROR",
    "msgKey": "CRITICAL_UPDATE_AVAILABLE",
  },
]
`;
